build/k8s/tpl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attendance
  namespace: attendance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: attendance
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      namespace: deafult
      labels:
        app: attendance
    spec:
      containers:
        - name: data-center
          image: reg.hoper.xyz/default/attendance:v3.1.1-202104011156
          imagePullPolicy: Always
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 50Mi
          volumeMounts:
            - name: logs
              mountPath: /logs
            - name: config
              mountPath: /
          command: ["./attendance"]
      volumes:
        - name: logs
          hostPath:
            path: /home/crm/dev/logs
        - name: config
          configMap:
            items:
              - key: config
                path: /home/crm/dev/config.toml

---
apiVersion: v1
kind: Service
metadata:
  name: attendance
  labels:
    app: attendance
spec:
  selector:
    app: attendance
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8090
