build/k8s/tpl/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myServiceA
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /foo
            backend:
              serviceName: service1
              servicePort: 8001
          - path: /bar
            backend:
              serviceName: service2
              servicePort: 8080
    - host: bar.foo.com
      http:
        paths:
          - path: /foo
            backend:
              serviceName: service1
              servicePort: 8001
          - path: /bar
            backend:
              serviceName: service2
              servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  generation: 1
  name: $mod
  namespace: $namespace
spec:
  rules:
    - host: $mod.$namespace
      http:
        paths:
          - backend:
              serviceName: $mod
              servicePort: 80
            path: /
